# giga-chess-desktop

./: Cargo.toml  README.md
src/: api.rs  app.rs  game.rs  main.rs  persistence.rs
src/api/: error.rs
src/app/: asset_server.rs  components.rs  modals.rs  state.rs  validation.rs  views.rs  windows.rs
src/app/components/: chess_board.rs  validated_field.rs
src/app/modals/: login.rs  login_or_register.rs  register.rs  server_settings.rs
src/app/state/: login.rs
src/app/views/: main_menu.rs  online_home.rs  sandbox.rs
src/app/windows/: game_control.rs  sandbox_game_creation.rs
src/persistence/: color.rs
src/traits/: chess_board.rs
src/types/: shared.rs
